fix gallery thumb widths on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -508,6 +508,11 @@ a {
         display: unset;
     }
 
+    .galleryThumb > .gatsby-image-wrapper,
+    .galleryThumb > .loading-wrapper > img {
+        width: 75%;
+    }
+
     .artworkThumb {
         flex-basis: 100%;
     }
